--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,8 @@ jobs:
           node-version-file: .nvmrc
           cache: 'pnpm'
 
+      - name: Install Dependencies
+        run: pnpm install -g turbo@2.5.6
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
