--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install Dependencies
-        run: pnpm install -g turbo@2.5.6
+        run: pnpm i
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
