--- a/packages/flow/package.json
+++ b/packages/flow/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kiberon-labs/behave-graph-flow",
-  "version": "0.10.1",
+  "version": "1.0.0",
   "type": "module",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
@@ -38,5 +38,8 @@
   "peerDependencies": {
     "reactflow": "^11.1.1",
     "@kiberon-labs/behave-graph": "*"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
