--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,5 +48,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Use OIDC for npm authentication instead of NPM_TOKEN
-          # https://github.com/changesets/changesets/issues/1152#issuecomment-3190884868
-          NPM_TOKEN: ''
+          # # https://github.com/changesets/changesets/issues/1152#issuecomment-3190884868
+          # NPM_TOKEN: ''
+
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
