--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kiberon-labs/behave-graph.git",
+    "url": "https://github.com/Kiberon-Labs/behave-graph",
     "directory": "packages/core"
   },
   "bugs": "https://github.com/kiberon-labs/behave-graph/issues",
