--- a/packages/flow/package.json
+++ b/packages/flow/package.json
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kiberon-labs/behave-graph.git",
+    "url": "https://github.com/Kiberon-Labs/behave-graph",
     "directory": "packages/flow"
   },
   "bugs": "https://github.com/kiberon-labs/behave-graph/issues",
