--- a/packages/scene/package.json
+++ b/packages/scene/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kiberon-labs/behave-graph.git",
+    "url": "https://github.com/Kiberon-Labs/behave-graph",
     "directory": "packages/scene"
   },
   "bugs": "https://github.com/kiberon-labs/behave-graph/issues",
